    ** Functions [N]SUBST*, LAST, NRECONC, [N]SUBLIS may return any
       object.
    ** DISASSEMBLE works with closures and funcallable instances.
    ** ADD-METHOD now returns the generic function, not the new method.
    ** FIND-METHOD signals an error if the lengths of the specializers
       is incompatible with the generic function, even if the ERRORP
       argument is true.
    ** TYPE-OF returns recognizeable subtypes of all built-in-types of
       which its argument is a member.
    ** DEFCLASS only redefines the class named by its class-name
       argument if that name is the proper name of the class;
       otherwise, it creates a new class.
    ** SLOT-UNBOUND now correctly initalizes the CELL-ERROR-NAME slot
       of the UNBOUND-SLOT condition to the name of the slot.
    ** (SETF (AREF bv 0) ...) did not work for bit vectors.
    ** SLOT-UNBOUND and SLOT-MISSING now have their return values
       treated by SLOT-BOUNDP, SLOT-VALUE, (SETF SLOT-VALUE) and
       SLOT-MAKUNBOUND in the specified fashion.

changes in sbcl-0.8.1 relative to sbcl-0.8.0:
  * fixed bug 148: failure to inline-expand a local function left
    garbage, confusing the compiler.

planned incompatible changes in 0.8.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, it might impact TRACE. They both encapsulate functions, and
    it's not clear yet how e.g. UNPROFILE will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are using
    profiling. If you never profile anything, TRACE should continue to
    behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
    now does what ANSI says it should. The CMU-CL-style 
    SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.