@@ -1882,6 +1882,9 @@ changes in sbcl-0.8.1 relative to sbcl-0.8.0:
 changes in sbcl-0.8.1 relative to sbcl-0.8.0:
   * fixed bug 148: failure to inline-expand a local function left
     garbage, confusing the compiler.
+  * fixed bugs 3cd: structure slot readers perform type check if the
+    slot can have an invalid value (i.e. it is either not initialized
+    or can be written with a less specific slot writer).
 
 planned incompatible changes in 0.8.x:
   * (not done yet, but planned:) When the profiling interface settles
